<resources>
    <string name="app_name">hormart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="keluar">KELUAR</string>
    <string name="Nama_profil_menu" />
    <string name="title_row_lv">title</string>
    <string name="name">Nama Lengkap</string>
    <string name="btn_masuk">Masuk</string>
    <string name="btn_daftar">Daftar</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="home_nav">Home</string>
    <string name="chat_nav">Chat</string>
    <string name="iklan_nav">Iklan</string>
    <string name="profil_nav">Profil</string>
    <string name="beranda">Beranda</string>
    <string name="name_menu_profil">Muhammad Fathur Rahman</string>
    <string name="et_password_login">Kata Sandi</string>
    <string name="notif">notif</string>
    <string name="cari">Cari</string>
    <string name="mau_jual_apa_hari_ini">Mau jual apa hari ini ?</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="mau_jual_apa">Mau Jual apa ?</string>
    <string name="harga">Harga ?</string>
    <string name="masukan_judul_produk_anda">Masukan judul produk anda</string>
    <string name="masukan_harga">Masukan Harga</string>
    <string name="zero">0</string>
    <string name="username">Username</string>
    <string name="ikuti">Ikuti</string>
    <string name="hubungi">Hubungi</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="jual">+ Jual +</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="header">header</string>
    <string name="footer">footer</string>
    <string name="simpan">Simpan</string>
    <string name="fathurrahman">\@Fathurrahman</string>
    <string name="bio">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).  "</string>
    <string name="fullname">Fullname</string>
    <string name="alamat">Alamat</string>
    <string name="btn_setting">btn setting</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scroll">Scroll</string>
    <string name="slide">Slide</string>
    <string name="door">Door</string>
    <string name="doorIn">DoorIn</string>
    <string name="doorOut">DoorOut</string>
    <string name="lewati">Lewati</string>
    <string name="sub_info_dc">Pastikan koneksi Wi-Fi atau Data Selular sudah aktif \ndan coba lagi ya.</string>
    <string name="info_dc">Yah, Internetmu terputus ..</string>
    <string name="buka_pengaturan">Buka Pengaturan</string>
    <string name="silahkanmasukdulu">Silahkan Masuk atau Daftar Dahulu</string>
    <string name="kembali">kembali</string>
    <string name="setting">Setting</string>
</resources>