<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/containerdc"
    android:background="@drawable/bg_fragments"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.bottomsheet.DisconnectedSheetFragment">

<!--    <View-->
<!--        android:orientation="vertical"-->
<!--        android:id="@+id/viewganjeldc"-->
<!--        android:layout_gravity="top"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="80dp"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/ll_lottie_service"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-120dp"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lottie_rawRes="@raw/noconnection"
                app:lottie_autoPlay="true"
                android:id="@+id/lottie_service"
                app:lottie_loop="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="-65dp"
            android:layout_below="@+id/ll_lottie_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_info_dc"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/info_dc"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="@font/bebasneue"
                android:textSize="20sp"
                android:id="@+id/tv_info_dc"
                android:paddingHorizontal="20dp"
                android:textColor="@color/red"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_info_dc"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:fontFamily="@font/titillium"
                android:id="@+id/tv_subinfo_dc"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:orientation="horizontal">

                <Button
                    android:layout_marginTop="5dp"
                    android:id="@+id/btn_opn_set_main"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/pengaturan"
                    android:background="@drawable/bg_btn_login"
                    android:textColor="@color/white"
                    android:layout_marginEnd="5dp"/>

<!--                <Button-->
<!--                    android:layout_marginStart="5dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:layout_marginTop="5dp"-->
<!--                    android:id="@+id/btn_try_again_main"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:text="Coba Lagi"-->
<!--                    android:background="@drawable/bg_btn_login"-->
<!--                    android:textColor="@color/white"/>-->

            </LinearLayout>

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/catnointernet"/>

    </RelativeLayout>

</LinearLayout>