<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.auth.LoginTabFragment">

    <LinearLayout
        android:scaleType="fitCenter"
        android:id="@+id/ll_bg_fab"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_facebook"
            app:borderWidth="2dp"
            app:fabCustomSize="50dp"
            android:contentDescription="fab_fb" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_twitter"
            app:borderWidth="2dp"
            android:layout_gravity="top"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:fabCustomSize="50dp"
            android:contentDescription="fab_tw" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_instagram"
            app:borderWidth="2dp"
            app:fabCustomSize="50dp"
            android:contentDescription="fab_ig" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/header"
        android:src="@drawable/milkdownheader"
        android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/footer"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/footerlogin"
        android:layout_gravity="bottom"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="15dp"
                android:layout_width="match_parent"
                android:layout_margin="30dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linierparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="30dp"
                    android:paddingHorizontal="15dp">

                    <LinearLayout
                        android:id="@+id/linier_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="10dp"
                                app:srcCompat="@drawable/ic_mail" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:gravity="bottom">

                                <EditText
                                    android:id="@+id/et_email_login"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:paddingStart="10dp"
                                    android:background="@drawable/bg_input_et"
                                    android:hint="@string/alamat_email"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1"
                                    android:singleLine="true"
                                    android:textColorHint="#DC0000" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linier_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                app:srcCompat="@drawable/ic_lock_open" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:gravity="bottom"
                                app:passwordToggleEnabled="true">

                                <EditText
                                    android:id="@+id/et_password_login"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:paddingStart="10dp"
                                    android:background="@drawable/bg_input_et"
                                    android:focusable="true"
                                    android:focusableInTouchMode="true"
                                    android:hint="@string/kata_sandi"
                                    android:inputType="textPassword"
                                    android:maxLines="1"
                                    android:minEms="5"
                                    android:singleLine="true"
                                    tools:ignore="RtlSymmetry" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/lupa_sandi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="10dp"
                        android:text="@string/lupa_kata_sandi" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="-55dp"
                android:background="@drawable/bg_btn_login"
                android:text="Masuk"
                android:textColor="@color/white"
                android:layout_marginBottom="300dp"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pblogin"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>