<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.auth.RegisterTabFragment">

    <!--agar drop masuk di card view di tambah elevation ex : baris 16 -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/header"
        android:src="@drawable/milkdownheader"
        android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/footer"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/footerlogin"
        android:layout_gravity="bottom"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_margin="30dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            app:srcCompat="@drawable/ic_cow_avatar" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:gravity="bottom">

                            <EditText
                                android:paddingStart="10dp"
                                android:background="@drawable/bg_input_et"
                                android:id="@+id/et_nama_pengguna_reg"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:hint="Nama Pengguna"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="10dp"
                            app:srcCompat="@drawable/ic_cow_avatar" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:gravity="bottom">

                            <EditText
                                android:paddingStart="10dp"
                                android:background="@drawable/bg_input_et"
                                android:id="@+id/et_nama_reg"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:hint="@string/name"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="10dp"
                            app:srcCompat="@drawable/ic_mail" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:gravity="bottom">

                            <EditText
                                android:paddingStart="10dp"
                                android:background="@drawable/bg_input_et"
                                android:id="@+id/et_email_reg"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:hint="Email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="10dp"
                            app:srcCompat="@drawable/ic_baseline_phone" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:gravity="bottom">

                            <EditText
                                android:id="@+id/et_phone"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:paddingStart="10dp"
                                android:background="@drawable/bg_input_et"
                                android:hint="Nomor Telepon"
                                android:inputType="phone"
                                android:maxLength="12"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:layout_marginBottom="50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            app:srcCompat="@drawable/ic_lock_open" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:gravity="bottom"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/et_password_reg"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:paddingStart="10dp"
                                android:background="@drawable/bg_input_et"
                                android:hint="Password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

        </LinearLayout>

        </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="-55dp"
                android:background="@drawable/bg_btn_login"
                android:text="Mendaftar"
                android:textColor="@color/white"
                android:layout_marginBottom="170dp"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pbreg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>